--- a/src/ContactMe.css
+++ b/src/ContactMe.css
@@ -2,6 +2,7 @@
 
 .contact-me{
     display: flex;
+    gap: 10px;
     flex-direction: column;
     justify-content: space-evenly;
     align-items: center;
