--- a/src/App.css
+++ b/src/App.css
@@ -196,6 +196,152 @@ footer{
 	cursor: pointer;
 }
 
+@media screen and (max-width: 1400px) {
+	/* For screens up to 768px wide */
+	.app nav a
+	{
+		font-size: 18px;
+	}
+	.app nav a.selected
+	{
+		font-size: 0px;
+	}
+	.app nav a img{
+		width: 21px;
+	}
+	.app nav a img.selected
+	{
+		border: 3px solid white;
+		border-radius: 10px;
+		width: 26px;
+	}
+	footer{
+		display: flex;
+		flex-direction: column-reverse;
+		align-items: center;
+		justify-content: center;
+		padding: 30px;
+		width: 90%;
+		height: fit-content;
+	}
+	
+	.name-logo{
+		display: flex;
+		flex-direction: row;
+		justify-content: space-between;
+		width: 100%;
+		height: fit-content;
+	}
+	
+	.footer-logo{
+		width: 40px;
+		object-fit: contain;
+	}
+	
+	.footer-name{
+		display: flex;
+		flex-direction: row;
+		align-items: flex-start;
+		justify-content: center;
+		font-size: 12px;
+		border-bottom: 3px solid purple;
+		border-radius: 20px;
+	}
+	
+	.footer-name span{
+		font-size: 8px;
+	}
+	
+	.footer-links{
+		display: flex;
+		flex-direction: row;
+		align-items: flex-start;
+		justify-content: space-between;
+		padding: 10px;
+		width: 80%;
+	}
+	
+	.social-media-links{
+		display: flex;
+		flex-direction: column;
+		width: fit-content;
+	}
+	
+	.social-icon{
+		display: flex;
+		flex-direction: row;
+		align-items: center;
+		font-size: 12px;
+		width: fit-content;
+	}
+
+	.social-icon:hover{
+		font-size: 12px;
+		cursor: pointer;
+		border-bottom: 2px solid purple;
+		border-bottom-left-radius: 20px;
+		padding-right: 10px;
+	}
+	
+	.social-icon:hover img{
+		border: 2px solid purple;
+		animation: iconPulse 3s linear infinite;
+	}
+
+	
+	.social-media-links img{
+		width: 20px;
+		border: 2px solid transparent;
+		animation: iconPulse 3s linear infinite;
+	}
+
+	.footer-link-list{
+		display: flex;
+		flex-direction: column;
+		align-items: left;
+		justify-content: left;
+		padding: 0px;
+		font-size: 12px;
+	}
+
+	.footer-link-list li{
+		background: url('link.svg') left center no-repeat;
+		padding: 5px;
+		padding-left: 28px;
+		margin: 5px;
+		border-radius: 20px;
+		border-top-right-radius: none;
+		border-bottom-right-radius: none;
+		border: solid 2px purple;
+		border-right: none;
+		transition-duration: 0.2s;
+		width: max-content;
+		padding-right: 20px;
+		height: 15px;
+		font-size: 14px;
+	}
+	
+	.footer-link-list li a{
+		text-decoration: none;
+		color: aqua;
+		transition-duration: 0.2s;
+	}
+	
+	.footer-link-list li:hover a{
+		text-decoration: none;
+		color: aqua;
+		
+	}
+	
+	.footer-link-list li:hover{
+		text-decoration: none;
+		border-color: aqua;
+		font-size: 14px;
+		cursor: pointer;
+	}
+}
+
+
 @media screen and (max-width: 768px) {
 	/* For screens up to 768px wide */
 	.app nav a
