--- a/src/Home.css
+++ b/src/Home.css
@@ -37,16 +37,84 @@
 
 .home p{
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     align-items: center;
     justify-content: center;
+    text-align: center;
     padding: 30px;
     font-size: 25px;
 }
 
 .home p img{
-    padding: 10px;
     width: 100px;
+}
+
+.link-span{
+    text-decoration: none;
+    padding: 5px;
+    font-weight: 800;
+    color: blueviolet;
+    transition-duration: 0.6s;
+    border-radius: 20px;
+}
+.link-span:hover{   
+    color: black;
+    transform: scale(1.4);
+    background-color: rgba(0, 255, 255, 0.5);
+    width: max-content;
+    cursor: pointer;
+    border-bottom: blueviolet 2px solid;
+}
+@media screen and (max-width: 1400px){
+    .home{
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
+    
+    .hello{
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: baseline;
+        font-size: 28px;
+        border: 2px solid purple;
+        padding: 30px;
+        width: 70%;
+    }
+    
+    .name{
+        margin-left: 10px;
+        color: transparent;
+        font-weight: 700;
+        background: linear-gradient(to left, purple, aqua);
+        -webkit-background-clip: text;
+        font-size: 35px;
+        text-align: center;
+        white-space: nowrap;
+    }
+    
+    .name::before {
+        content: "Maric, "; 
+        animation: changeContent 6s linear forwards;
+    }
+    
+    .home p{
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: center;
+        text-align: center;
+        padding: 30px;
+        font-size: 20px;
+        gap: 10px;
+    }
+    
+    .home p img{
+        width: 40px;
+    }
 }
 
 @media screen and (max-width: 768px)
