--- a/src/Home.css
+++ b/src/Home.css
@@ -6,17 +6,20 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    background-image: url('./HomeBackground.jpg');
+    background-size: 25%;
 }
 
 .hello{
+    width: 100%;
     display: flex;
     flex-direction: row;
     justify-content: center;
     align-items: baseline;
     font-size: 30px;
-    border: 2px solid purple;
-    padding: 30px;
-    width: 70%;
+    text-align: center;
+    background: linear-gradient(to bottom , black , transparent);
+
 }
 
 .name{
@@ -65,6 +68,12 @@
     cursor: pointer;
     border-bottom: blueviolet 2px solid;
 }
+.end-page{
+    height: 100px;
+    background: linear-gradient(to top, black, transparent);
+    width: 100%;
+}
+
 @media screen and (max-width: 1400px){
     .home{
         width: 100%;
@@ -79,10 +88,8 @@
         flex-direction: row;
         justify-content: center;
         align-items: baseline;
+        text-align: center;
         font-size: 28px;
-        border: 2px solid purple;
-        padding: 30px;
-        width: 70%;
     }
     
     .name{
@@ -125,7 +132,6 @@
         justify-content: center;
         align-items: center;
         font-size: 24px;
-        border: 2px solid purple;
         padding: 30px;
         width: 70%;
     }
@@ -170,7 +176,6 @@
         justify-content: center;
         align-items: center;
         font-size: 18px;
-        border: 2px solid purple;
         padding: 30px;
         width: 70%;
     }
