--- a/src/AboutMe.css
+++ b/src/AboutMe.css
@@ -8,10 +8,26 @@
     justify-content: center;
 }
 
+.avatarSec{
+    padding: 10px;
+    background-image: url('./Resources/HomeBackground.jpg');
+    background-size: 25%;
+    border-radius: 20px;
+}
+
+.stats{
+    margin-top: 10px;
+    margin-bottom: 10px;
+    border-radius: 25px;
+    border: 5px solid snow;
+}
+
 #Avatar{
     width: 300px;
     clip-path: circle();
     object-fit:scale-down;
+    border-radius: 100%;
+    border: 5px solid #141414;
 }
 
 .techItemList{
@@ -116,7 +132,7 @@
     padding: 10px;
     background: none;
     border: none;
-    border-radius: 100%;
+    border-radius: 10px;
     border: 2px transparent solid;
     border-top: none;
     border-bottom: none;
@@ -140,6 +156,44 @@
     border-top: none;
     border-bottom: none;
     animation: none;
+}
+
+.certificates-display{
+    margin-top: 10px;
+    width: 100%;    
+    display: flex;
+    align-items: stretch;
+    justify-content: center;
+    height: fit-content;
+}
+
+.certificates-display button{
+    width: 30px;
+    background-color: transparent;
+    color: transparent;
+    border: none;
+    transition-duration: 0.6s;
+}
+.certificates-display button:hover{
+    width: 100px;
+    cursor: pointer;
+    background-color: transparent;
+    color: aqua;
+    border: none;
+}
+.certificates-display .right{
+    background: linear-gradient(to right, purple, transparent);
+}
+.certificates-display .left{
+    background: linear-gradient(to left, purple, transparent);
+}
+.certificates-display button img{
+    width: 50%;
+    filter: drop-shadow(5px 0px 2px aqua);
+}
+
+.certificates-display .right img{
+    filter: drop-shadow(-5px  0px 2px aqua);
 }
 
 .cert-list{
@@ -170,10 +224,208 @@
     width: 50%;
     opacity: 1;
     transition-duration: 0.5s;
+    object-fit: contain;
 }
 .display-cert.error{
-    width: 10%;
+    width: 50%;
     opacity: 1;
+}
+
+.hidden{
+    display: none;
+}
+
+@media screen and (min-width: 769px) and (max-width: 1450px){
+
+    .AboutMe{
+        display: flex;
+        width: 100%;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
+    
+    .stats{
+        margin-top: 10px;
+        margin-bottom: 10px;
+        border-radius: 25px;
+        border: 5px solid snow;
+    }
+    
+    #Avatar{
+        width: 300px;
+        clip-path: circle();
+        object-fit:scale-down;
+        border-radius: 100%;
+        border: 5px solid #141414;
+    }
+    
+    .techItemList{
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        grid-gap: 10px;
+    }
+    
+    .TechStackTitle{
+        font-size: 22px;
+    }
+    
+    .info{
+        width: 100%;
+        display: flex;
+        flex-direction: row;
+        align-items:flex-start;
+        justify-content: space-evenly;
+    }
+    
+    .mainInfo{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        height: max-content;
+    }
+    
+    #CityLink{
+        display: flex;
+        flex-direction: row;
+        align-items: baseline;
+        justify-content: center;
+        font-size: 30px;
+        text-decoration: none;
+        color: aqua;
+        transition-duration: 0.8s;
+        width: 400px;
+        height: 80px;
+        border-bottom: 2px solid transparent;
+    }
+    
+    #CityLink:hover{
+        color: white;
+        font-size: 0px;
+        border-bottom: 2px solid purple;
+        border-radius: 50px;
+    }
+    
+    #CityLink #planet{
+        width: 80px;
+        transition-duration: 1s;
+    }
+    
+    #CityLink:hover #planet{
+        transform: rotate(360deg);
+    }
+    
+    .mainInfo p{
+        width: 700px;
+        font-size: 20px;
+        text-align: center;
+    }
+    
+    .certificates-sec{
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
+    .certificates-sec h1{
+        font-size: 22px;
+    }
+    .cert-pick-container{
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        justify-content: flex-start;
+        padding: 20px
+    
+    }
+    .cert-pick{
+        width: fit-content;
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+        color: aqua;
+        font-size: 22px;
+        height: 60px;
+    }
+    .lang-buttons{
+        display: flex;
+        flex-direction: row;
+        justify-content: space-evenly;
+        align-items: center;
+        width: 100%;
+        overflow: hidden;
+        height: 100px;
+        border-bottom: purple 4px solid;
+    }
+    .lang-buttons button{
+        font-size: 14px;
+        padding: 10px;
+        background: none;
+        border: none;
+        border-radius: 10px;
+        border: 2px transparent solid;
+        border-top: none;
+        border-bottom: none;
+        color: aqua;
+        transition-duration: 0.4s;
+    }
+    .lang-buttons button:hover{
+        font-size: 16px;
+        background: none;
+        background-color: rgba(128, 0, 128, 0.5);
+        border: 2px purple solid;
+        border-top: none;
+        border-bottom: none;
+        cursor: pointer;
+    }
+    .lang-buttons button.selected{
+        font-size: 16px;
+        background-color: rgba(128, 0, 128, 0.5);
+        border: 2px purple solid;
+        border-top: none;
+        border-bottom: none;
+        animation: none;
+    }
+    
+    .cert-list{
+        width: 100%;
+        align-items: center;
+        justify-content: center;
+        display: flex;
+        flex-direction: row;
+        height: 200px;
+    }
+    .cert-list img{
+        width: 100px;
+        border: 2px solid purple;
+        transition-duration: 1s;
+    }
+    .cert-list img:hover{
+        cursor: pointer;
+        opacity: 0.8;
+        border: 2px solid purple;
+        transform: translateY(10px);
+    }
+    .cert-list img.selected{
+        opacity: 0.8;
+        border: 2px solid purple;
+        transform: translateY(10px);
+    }
+    .display-cert{
+        width: 50%;
+        opacity: 1;
+        transition-duration: 0.5s;
+        object-fit: contain;
+    }
+    .display-cert.error{
+        width: 50%;
+        opacity: 1;
+    }
+
 }
 
 @media screen and (max-width: 768px) {
@@ -183,6 +435,7 @@
         flex-direction: column;
         align-items: center;
         justify-content: center;
+        padding: 0px;
     }
 
     #Avatar{
@@ -253,6 +506,9 @@
         font-size: 18px;
         text-align: center;
     }
+    .certificates-sec h1{
+        font-size: 20px;
+    }
     .display-cert{
         width: 50%;
         opacity: 1;
@@ -261,7 +517,13 @@
     .display-cert.error{
     width: 20%;
     opacity: 1;
-}
+    }
+    .certificates-display button{
+        width: 10%;
+    }
+    .certificates-display button:hover{
+        width: 10%;
+    }
 }
 
 @media screen and (max-width: 576px) {
@@ -269,6 +531,9 @@
         width: 200px;
         clip-path: circle();
         object-fit:scale-down;
+    }
+    .avatarSec{
+        padding: 0px;
     }
     
     .techItemList{
@@ -335,12 +600,18 @@
         text-align: center;
     }
     .display-cert{
-        width: 90%;
+        width: 70%;
         opacity: 1;
         transition-duration: 0.5s;
     }
     .display-cert.error{
-        width: 20%;
+        width: 70%;
         opacity: 1;
+    }
+    .certificates-display button{
+        width: 10%;
+    }
+    .certificates-display button:hover{
+        width: 10%;
     }
 }
