--- a/src/Home.css
+++ b/src/Home.css
@@ -6,7 +6,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    background-image: url('./HomeBackground.jpg');
+    background-image: url('./Resources/HomeBackground.jpg');
     background-size: 25%;
 }
 
@@ -18,7 +18,7 @@
     align-items: baseline;
     font-size: 30px;
     text-align: center;
-    background: linear-gradient(to bottom , black , transparent);
+    background: linear-gradient(to bottom , #141414 , transparent);
 
 }
 
@@ -70,7 +70,7 @@
 }
 .end-page{
     height: 100px;
-    background: linear-gradient(to top, black, transparent);
+    background: linear-gradient(to top, #141414, transparent);
     width: 100%;
 }
 
