--- a/src/App.css
+++ b/src/App.css
@@ -14,6 +14,7 @@
 {
 	margin-top: 5px;
 	display: flex;
+	flex-wrap: wrap;
 	flex-direction: row;
 	color: aqua;
 	justify-self: left;
@@ -22,7 +23,6 @@
 	font-size: 20px;
 	padding: 5px;
 	height: 100px;
-	min-width: 300px;
 	align-items: center;
 }
 
@@ -78,7 +78,6 @@ footer{
 	align-items: center;
 	justify-content: center;
 	border-top: 2px solid aqua;
-	padding: 30px;
 	width: 90%;
 	height: fit-content;
 }
@@ -220,7 +219,6 @@ footer{
 		flex-direction: column-reverse;
 		align-items: center;
 		justify-content: center;
-		padding: 30px;
 		width: 90%;
 		height: fit-content;
 	}
@@ -366,7 +364,6 @@ footer{
 		flex-direction: column-reverse;
 		align-items: center;
 		justify-content: center;
-		padding: 30px;
 		width: 90%;
 		height: fit-content;
 	}
@@ -400,7 +397,7 @@ footer{
 	
 	.footer-links{
 		display: flex;
-		flex-direction: row;
+		flex-direction: column;
 		align-items: flex-start;
 		justify-content: space-between;
 		padding: 10px;
@@ -512,7 +509,6 @@ footer{
 		flex-direction: column-reverse;
 		align-items: center;
 		justify-content: center;
-		padding: 30px;
 		width: 90%;
 		height: fit-content;
 	}
@@ -546,7 +542,7 @@ footer{
 	
 	.footer-links{
 		display: flex;
-		flex-direction: row;
+		flex-direction: column;
 		align-items: flex-start;
 		justify-content: space-between;
 		padding: 10px;
