--- a/src/Home.css
+++ b/src/Home.css
@@ -46,6 +46,9 @@
     text-align: center;
     padding: 30px;
     font-size: 25px;
+    z-index: 1;
+    background-color: #14141480;
+    border-radius: 20px;
 }
 
 .home p img{
@@ -73,50 +76,27 @@
     background: linear-gradient(to top, #141414, transparent);
     width: 100%;
 }
+.home-img{
+    position: absolute;
+    width: 95%;
+    z-index: 0;
+    opacity: 0.7;
+    border-radius: 20px;
+    border: solid 5px black;
+}
 
 @media screen and (max-width: 1400px){
-    .home{
-        width: 100%;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-    }
     
     .hello{
-        display: flex;
-        flex-direction: row;
-        justify-content: center;
-        align-items: baseline;
-        text-align: center;
         font-size: 28px;
     }
     
     .name{
-        margin-left: 10px;
-        color: transparent;
-        font-weight: 700;
-        background: linear-gradient(to left, purple, aqua);
-        -webkit-background-clip: text;
         font-size: 35px;
-        text-align: center;
-        white-space: nowrap;
-    }
-    
-    .name::before {
-        content: "Maric, "; 
-        animation: changeContent 6s linear forwards;
     }
     
     .home p{
-        display: flex;
-        flex-direction: row;
-        align-items: center;
-        justify-content: center;
-        text-align: center;
-        padding: 30px;
         font-size: 20px;
-        gap: 10px;
     }
     
     .home p img{
@@ -127,86 +107,39 @@
 @media screen and (max-width: 768px)
 {
     .hello{
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        font-size: 24px;
-        padding: 30px;
-        width: 70%;
+        font-size: 23px;
     }
     
     .name{
-        margin-left: 10px;
-        color: transparent;
-        font-weight: 700;
-        background: linear-gradient(to left, purple, aqua);
-        -webkit-background-clip: text;
-        font-size: 40px;
-        text-align: center;
-        white-space: nowrap;
-    }
-    
-    .name::before {
-        content: "Maric, "; 
-        animation: changeContent 6s linear forwards;
+        font-size: 28px;
     }
     
     .home p{
-        text-align: center;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-        padding: 30px;
-        font-size: 20px;
+        font-size: 18px;
     }
     
     .home p img{
-        padding: 10px;
-        width: 100px;
+        width: 40px;
     }
 }
 
 @media screen and (max-width: 576px)
 {
     .hello{
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        font-size: 18px;
-        padding: 30px;
-        width: 70%;
+        font-size: 23px;
+        flex-wrap: wrap;
     }
     
     .name{
-        margin-left: 10px;
-        color: transparent;
-        font-weight: 700;
-        background: linear-gradient(to left, purple, aqua);
-        -webkit-background-clip: text;
-        font-size: 30px;
-        text-align: center;
-        white-space: nowrap;
-    }
-    
-    .name::before {
-        content: "Maric, "; 
-        animation: changeContent 6s linear forwards;
+        font-size: 24px;
     }
     
     .home p{
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-        padding: 15px;
-        font-size: 18px;
+        flex-wrap: wrap;
+        font-size: 14px;
     }
     
     .home p img{
-        padding: 10px;
-        width: 50px;
+        width: 40px;
     }
 }
