--- a/src/BlogTopicPage.css
+++ b/src/BlogTopicPage.css
@@ -84,6 +84,13 @@
 .blog-link:hover{
     color:aqua;
 }
+.paragraph-image{
+    width: 100%;
+}
+.paragraph-image img{
+    width: 100%;
+    object-fit: cover;
+}
 @media (min-width: 1025px) and (max-width: 1400px) {
     .blog-topic-title-text h1{
         font-size: 28px;
