--- a/src/AboutMe/ListItem.css
+++ b/src/AboutMe/ListItem.css
@@ -1,5 +1,5 @@
 /* ListItem.css */
-@import url('Animations.css');
+@import url('../Animations.css');
 
 
 .tooltip {
@@ -18,12 +18,8 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    margin-top: 10px;
     font-size: 24px;
     transition-duration: 0.7s;
-    height: 50px;
-    background: linear-gradient(to right, aqua , purple);
-    -webkit-background-clip: text;
 }
 
 .techItem:hover{
@@ -32,12 +28,11 @@
 }
 
 .techItem:hover img{
-    padding: 5px;
     border-color: purple;
 }
 
 .techItem img{
-    margin-right: 15px;
+    padding: 5px;
     width: 40px;
     transition-duration: 0.7s;
     border: 3px solid transparent;
@@ -75,7 +70,6 @@
         flex-direction: column;
         align-items: center;
         justify-content: center;
-        margin-top: 10px;
         font-size: 24px;
         transition-duration: 0.7s;
         height: fit-content;
@@ -84,7 +78,6 @@
     }
     
     .techItem img{
-        margin-right: 15px;
         width: 30px;
         transition-duration: 0.7s;
         border: 3px solid transparent;
@@ -118,7 +111,6 @@
         flex-direction: column;
         align-items: center;
         justify-content: center;
-        margin-top: 10px;
         font-size: 24px;
         transition-duration: 0.7s;
         width: 100px;
