--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,6 @@
 @import url('Animations.css');
 
-.app 
-{
+.app{
 	display: flex;
 	flex-direction: column;
 	align-items: center;
@@ -10,8 +9,7 @@
 	width: 100%;
 }
 
-.app nav
-{
+.app nav{
 	margin-top: 5px;
 	display: flex;
 	flex-wrap: wrap;
@@ -20,26 +18,27 @@
 	justify-self: left;
 	align-self: flex-start;
 	text-align: left;
-	font-size: 20px;
-	padding: 5px;
-	height: 100px;
 	align-items: center;
+	justify-content: flex-start;
+	gap: 10px;
+	width: 95%;
+	padding: 5px;
+	height: 60px;
+
 }
 
-.app nav a
-{
+.app nav a{
+	max-width: 300px;
 	display: flex;
 	flex-direction: row;
 	align-items: center;
-	margin-right: 10px;
 	text-decoration: none;
 	color: aqua;
 	transition-duration: 0.7s;
-  
 }
 
 .MainLogo{
-	width: 100px;
+	width: 80px;
 	padding: 10px;
 	animation: ColorChange 2s linear infinite;
 }
@@ -53,11 +52,11 @@
 .app nav a:hover
 {
 	color: white;
-	font-size: 20px;
+	font-size: larger;
 }
 .app nav a:hover img
 {
-  	width: 28px
+  	width: 20px
 }
 .app nav a img
 {
@@ -69,12 +68,68 @@
 {
 	border: 3px solid rgba(128, 0, 128, 0.667);
 	border-radius: 10px;
-	width: 40px;
+	width: 30px;
 }
+
+@media (min-width: 867.5px) and (max-width: 1100px){
+    
+}
+
+@media (min-width: 548px) and (max-width: 867px){
+	.app nav a{
+		font-size: 0px;
+	}
+	.app nav a:hover
+	{
+		font-size: 0px;
+	}
+	.app nav a:hover img
+	{
+		width: 20px
+	}
+	.app nav a img
+	{
+		width: 20px;
+	}
+	.app nav a img.selected
+	{
+		width: 30px;
+	}
+}
+
+@media (min-width: 340px) and (max-width: 547px){
+    .app nav a{
+		font-size: 0px;
+	}
+	.app nav a:hover
+	{
+		font-size: 0px;
+	}
+	.app nav a img
+	{
+		width: 20px;
+	}
+}
+
+@media (max-width: 339px){
+    .app nav a{
+		font-size: 0px;
+	}
+	.app nav a:hover
+	{
+		font-size: 0px;
+	}
+	.app nav a img
+	{
+		width: 20px;
+	}
+}
+
+/*=================================================================== */
 
 footer{
 	display: flex;
-	flex-direction: column-reverse;
+	flex-direction: column;
 	align-items: center;
 	justify-content: center;
 	border-top: 2px solid aqua;
@@ -97,22 +152,20 @@ footer{
 
 .footer-name{
 	display: flex;
-	font-size: 24px;
 	border-bottom: 3px solid purple;
 	border-radius: 30%;
 	padding: 10px;
 }
-
 .footer-name span{
-	font-size: 14px;
+	font-size: smaller;
 }
-
 .footer-links{
 	display: flex;
 	flex-direction: row;
 	align-items: flex-start;
+	flex-wrap: wrap;
 	justify-content: space-between;
-	padding: 20px;
+	padding: 10px;
 	width: 80%;
 }
 
@@ -133,10 +186,11 @@ footer{
 	padding-right: 10px;
 	border-bottom: 4px solid transparent;
 	border-bottom-left-radius: 35px;
+	color: aliceblue;
 }
 
 .social-icon:hover{
-	font-size: 22px;
+	font-size: large;
 	cursor: pointer;
 	border-bottom: 4px solid purple;
 	
@@ -158,10 +212,10 @@ footer{
 
 .footer-link-list{
 	list-style-type: none;
-	font-size: 16px;
+	text-align: left;
 }
 .footer-link-list li{
-	background: url('link.svg') left center no-repeat;
+	background: url('./Resources/link.svg') left center no-repeat;
 	padding: 5px;
 	padding-left: 35px;
 	margin: 5px;
@@ -172,7 +226,6 @@ footer{
 	border-right: none;
 	transition-duration: 0.2s;
 	width: max-content;
-	padding-right: 20px;
 	height: 20px;
 }
 
@@ -191,441 +244,7 @@ footer{
 .footer-link-list li:hover{
 	text-decoration: none;
 	border-color: aqua;
-	font-size: 18px;
+	font-size: larger;
 	cursor: pointer;
-}
-
-@media screen and (max-width: 1400px) {
-	/* For screens up to 768px wide */
-	.app nav a
-	{
-		font-size: 18px;
-	}
-	.app nav a.selected
-	{
-		font-size: 0px;
-	}
-	.app nav a img{
-		width: 21px;
-	}
-	.app nav a img.selected
-	{
-		border: 3px solid white;
-		border-radius: 10px;
-		width: 26px;
-	}
-	footer{
-		display: flex;
-		flex-direction: column-reverse;
-		align-items: center;
-		justify-content: center;
-		width: 90%;
-		height: fit-content;
-	}
-	
-	.name-logo{
-		display: flex;
-		flex-direction: row;
-		justify-content: space-between;
-		width: 100%;
-		height: fit-content;
-	}
-	
-	.footer-logo{
-		width: 40px;
-		object-fit: contain;
-	}
-	
-	.footer-name{
-		display: flex;
-		flex-direction: row;
-		align-items: flex-start;
-		justify-content: center;
-		font-size: 12px;
-		border-bottom: 3px solid purple;
-		border-radius: 20px;
-	}
-	
-	.footer-name span{
-		font-size: 8px;
-	}
-	
-	.footer-links{
-		display: flex;
-		flex-direction: row;
-		align-items: flex-start;
-		justify-content: space-between;
-		padding: 10px;
-		width: 80%;
-	}
-	
-	.social-media-links{
-		display: flex;
-		flex-direction: column;
-		width: fit-content;
-	}
-	
-	.social-icon{
-		display: flex;
-		flex-direction: row;
-		align-items: center;
-		font-size: 12px;
-		width: fit-content;
-	}
-
-	.social-icon:hover{
-		font-size: 12px;
-		cursor: pointer;
-		border-bottom: 2px solid purple;
-		border-bottom-left-radius: 20px;
-		padding-right: 10px;
-	}
-	
-	.social-icon:hover img{
-		border: 2px solid purple;
-		animation: iconPulse 3s linear infinite;
-	}
-
-	
-	.social-media-links img{
-		width: 20px;
-		border: 2px solid transparent;
-		animation: iconPulse 3s linear infinite;
-	}
-
-	.footer-link-list{
-		display: flex;
-		flex-direction: column;
-		align-items: left;
-		justify-content: left;
-		padding: 0px;
-		font-size: 12px;
-	}
-
-	.footer-link-list li{
-		background: url('link.svg') left center no-repeat;
-		padding: 5px;
-		padding-left: 28px;
-		margin: 5px;
-		border-radius: 20px;
-		border-top-right-radius: none;
-		border-bottom-right-radius: none;
-		border: solid 2px purple;
-		border-right: none;
-		transition-duration: 0.2s;
-		width: max-content;
-		padding-right: 20px;
-		height: 15px;
-		font-size: 14px;
-	}
-	
-	.footer-link-list li a{
-		text-decoration: none;
-		color: aqua;
-		transition-duration: 0.2s;
-	}
-	
-	.footer-link-list li:hover a{
-		text-decoration: none;
-		color: aqua;
-		
-	}
-	
-	.footer-link-list li:hover{
-		text-decoration: none;
-		border-color: aqua;
-		font-size: 14px;
-		cursor: pointer;
-	}
-}
-
-
-@media screen and (max-width: 768px) {
-	/* For screens up to 768px wide */
-	.app nav a
-	{
-		font-size: 0px;
-	}
-	.app nav a.selected
-	{
-		font-size: 0px;
-	}
-	.app nav a img{
-		width: 21px;
-	}
-	.app nav a img.selected
-	{
-		border: 3px solid white;
-		border-radius: 10px;
-		width: 26px;
-	}
-	footer{
-		display: flex;
-		flex-direction: column-reverse;
-		align-items: center;
-		justify-content: center;
-		width: 90%;
-		height: fit-content;
-	}
-	
-	.name-logo{
-		display: flex;
-		flex-direction: row;
-		justify-content: space-between;
-		width: 100%;
-		height: fit-content;
-	}
-	
-	.footer-logo{
-		width: 40px;
-		object-fit: contain;
-	}
-	
-	.footer-name{
-		display: flex;
-		flex-direction: row;
-		align-items: flex-start;
-		justify-content: center;
-		font-size: 12px;
-		border-bottom: 3px solid purple;
-		border-radius: 20px;
-	}
-	
-	.footer-name span{
-		font-size: 8px;
-	}
-	
-	.footer-links{
-		display: flex;
-		flex-direction: column;
-		align-items: flex-start;
-		justify-content: space-between;
-		padding: 10px;
-		width: 80%;
-	}
-	
-	.social-media-links{
-		display: flex;
-		flex-direction: column;
-		width: fit-content;
-	}
-	
-	.social-icon{
-		display: flex;
-		flex-direction: row;
-		align-items: center;
-		font-size: 12px;
-		width: fit-content;
-	}
-
-	.social-icon:hover{
-		font-size: 12px;
-		cursor: pointer;
-		border-bottom: 2px solid purple;
-		border-bottom-left-radius: 20px;
-		padding-right: 10px;
-	}
-	
-	.social-icon:hover img{
-		border: 2px solid purple;
-		animation: iconPulse 3s linear infinite;
-	}
-
-	
-	.social-media-links img{
-		width: 20px;
-		border: 2px solid transparent;
-		animation: iconPulse 3s linear infinite;
-	}
-
-	.footer-link-list{
-		display: flex;
-		flex-direction: column;
-		align-items: left;
-		justify-content: left;
-		padding: 0px;
-		font-size: 12px;
-	}
-
-	.footer-link-list li{
-		background: url('link.svg') left center no-repeat;
-		padding: 5px;
-		padding-left: 28px;
-		margin: 5px;
-		border-radius: 20px;
-		border-top-right-radius: none;
-		border-bottom-right-radius: none;
-		border: solid 2px purple;
-		border-right: none;
-		transition-duration: 0.2s;
-		width: max-content;
-		padding-right: 20px;
-		height: 15px;
-		font-size: 14px;
-	}
-	
-	.footer-link-list li a{
-		text-decoration: none;
-		color: aqua;
-		transition-duration: 0.2s;
-	}
-	
-	.footer-link-list li:hover a{
-		text-decoration: none;
-		color: aqua;
-		
-	}
-	
-	.footer-link-list li:hover{
-		text-decoration: none;
-		border-color: aqua;
-		font-size: 14px;
-		cursor: pointer;
-	}
-	
-}
-
-@media screen and (max-width: 576px) {
-	/* For screens up to 576px wide */
-	.app nav a
-	{
-		font-size: 0px;
-	}
-	.app nav a.selected
-	{
-		font-size: 0px;
-	}
-	.app nav a img{
-		width: 21px;
-	}
-	.app nav a img.selected
-	{
-		border: 3px solid white;
-		border-radius: 10px;
-		width: 26px;
-	}
-	footer{
-		display: flex;
-		flex-direction: column-reverse;
-		align-items: center;
-		justify-content: center;
-		width: 90%;
-		height: fit-content;
-	}
-	
-	.name-logo{
-		display: flex;
-		flex-direction: row;
-		justify-content: space-between;
-		width: 100%;
-		height: fit-content;
-	}
-	
-	.footer-logo{
-		width: 40px;
-		object-fit: contain;
-	}
-	
-	.footer-name{
-		display: flex;
-		flex-direction: row;
-		align-items: flex-start;
-		justify-content: center;
-		font-size: 12px;
-		border-bottom: 3px solid purple;
-		border-radius: 20px;
-	}
-	
-	.footer-name span{
-		font-size: 8px;
-	}
-	
-	.footer-links{
-		display: flex;
-		flex-direction: column;
-		align-items: flex-start;
-		justify-content: space-between;
-		padding: 10px;
-		width: 95%;
-	}
-	
-	.social-media-links{
-		display: flex;
-		flex-direction: column;
-		flex-wrap: wrap;
-	}
-	
-	.social-icon{
-		display: flex;
-		flex-direction: row;
-		align-items: center;
-		font-size: 12px;
-		width: fit-content;
-	}
-
-	.social-icon:hover{
-		font-size: 12px;
-		cursor: pointer;
-		border-bottom: 2px solid purple;
-		border-bottom-left-radius: 20px;
-		padding-right: 10px;
-	}
-	
-	.social-icon:hover img{
-		border: 2px solid purple;
-		animation: iconPulse 3s linear infinite;
-	}
-
-	
-	.social-media-links img{
-		width: 20px;
-		border: 2px solid transparent;
-		animation: iconPulse 3s linear infinite;
-	}
-
-	.footer-link-list{
-		display: flex;
-		flex-direction: column;
-		align-items: left;
-		justify-content: left;
-		padding: 0px;
-		font-size: 12px;
-	}
-
-	.footer-link-list li{
-		background: url('link.svg') left center no-repeat;
-		padding: 5px;
-		padding-left: 28px;
-		margin: 5px;
-		border-radius: 20px;
-		border-top-right-radius: none;
-		border-bottom-right-radius: none;
-		border: solid 2px purple;
-		border-right: none;
-		transition-duration: 0.2s;
-		width: max-content;
-		padding-right: 20px;
-		height: 15px;
-		font-size: 14px;
-	}
-	
-	.footer-link-list li a{
-		text-decoration: none;
-		color: aqua;
-		transition-duration: 0.2s;
-	}
-	
-	.footer-link-list li:hover a{
-		text-decoration: none;
-		color: aqua;
-		
-	}
-	
-	.footer-link-list li:hover{
-		text-decoration: none;
-		border-color: aqua;
-		font-size: 14px;
-		cursor: pointer;
-	}
 }
 
