--- a/src/Blog/BlogTopicPage.css
+++ b/src/Blog/BlogTopicPage.css
@@ -6,7 +6,7 @@
     flex-direction: column;
     align-items: flex-start;
     justify-content: center;
-    background: url("Resources/HomeBackground.jpg");
+    background: url("../Resources/HomeBackground.jpg");
     border-radius: 20px;
     border: 2px purple solid;
     margin-bottom: 20px;
