--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,7 @@
 @import url('Animations.css');
 
 .app{
+	box-sizing: border-box;
 	display: flex;
 	flex-direction: column;
 	align-items: center;
@@ -10,6 +11,7 @@
 }
 
 .app nav{
+	box-sizing: border-box;
 	margin-top: 5px;
 	display: flex;
 	flex-wrap: wrap;
@@ -128,12 +130,13 @@
 /*=================================================================== */
 
 footer{
+	box-sizing: border-box;
 	display: flex;
 	flex-direction: column;
 	align-items: center;
 	justify-content: center;
 	border-top: 2px solid aqua;
-	width: 90%;
+	width: 100%;
 	height: fit-content;
 }
 
