--- a/src/Blog/Blog.css
+++ b/src/Blog/Blog.css
@@ -18,7 +18,7 @@
     width: 100%;
     display: flex;
     flex-direction: row;
-    align-items: center;
+    align-items: stretch;
     justify-content: center;
     gap: 12px;
     flex-wrap: wrap;
