--- a/src/Blog/BlogTopic.css
+++ b/src/Blog/BlogTopic.css
@@ -4,8 +4,9 @@
     justify-content: center;
     text-decoration: none;
     color: aqua;
-    width: 500px;
-    height: fit-content;
+    width: 100%;
+    max-width: 500px;
+    height: max-content;
     border: 2px solid purple;
     overflow:hidden;
     border-radius: 15px;
@@ -24,6 +25,10 @@
 }
 
 .text-container{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: flex-start;
     width: 500px;
     z-index: 0;
     background: linear-gradient(to right, purple, transparent);
