--- a/src/Blog/BlogTopicPage.css
+++ b/src/Blog/BlogTopicPage.css
@@ -1,7 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Source+Code+Pro:wght@200&display=swap');
 
 .blog-topic-page{
-    width: 95%;
+    box-sizing: border-box;
+    width: 100%;
     display: flex;
     flex-direction: column;
     align-items: flex-start;
@@ -10,6 +11,7 @@
     border-radius: 20px;
     border: 2px purple solid;
     margin-bottom: 20px;
+    color:azure;
 }
 
 .blog-topic-title{
@@ -43,10 +45,13 @@
     margin-left: 15px;
 }
 .blog-topic-section h2{
+    color: aqua;
     padding-bottom: 5px;
     border-bottom: 5px solid rgba(128, 0, 128, 0.6);
 }
 .paragraph{
+    display: flex;
+    flex-direction: column;
     font-size: 20px;
 }
 .code{
@@ -78,11 +83,11 @@
 .blog-link{
     text-decoration: none;
     border-bottom: purple 2px solid;
-    color: white;
+    color: aqua;
     transition-duration: 0.6s;
 }
 .blog-link:hover{
-    color:aqua;
+    color:white;
 }
 .paragraph-image{
     width: 100%;
