--- a/src/Home/Home.css
+++ b/src/Home/Home.css
@@ -1,6 +1,7 @@
 @import url('../Animations.css');
 
 .home{
+    box-sizing: border-box;
     width: 100%;
     display: flex;
     flex-direction: column;
@@ -12,6 +13,7 @@
 
 
 .home h1{
+    box-sizing: border-box;
     width: 100%;
     text-align: center  ;
     margin-top: 0px;
@@ -20,16 +22,21 @@
     padding-bottom: 50px;
     border-radius: 10px;
     background: linear-gradient(to bottom, #141414, transparent);
+    font-size: 4vw;
 }
 
 .home-content{
+    width: 90%;
+    box-sizing: border-box;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: flex-start;
-    background-color: #14141499;
-    border: 1px solid purple;
+    background-color: #202020;
     padding-bottom: 20px;
+    filter: drop-shadow(0px 0px 4px aqua);
+    border-radius: 20px;
+    color: aliceblue;
 }
 
 .hello{
@@ -40,11 +47,12 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    border-radius: 10px;
     font-size: 25px;
     text-align: center;
     padding: 10px;
     padding-top: 20px;
+    border: 2px solid purple;
+    border-radius: 0px 0px 20px 20px;
 
 }
 
@@ -64,7 +72,7 @@
     animation: changeContent 6s linear forwards;
 }
 
-.home p{
+.home .p{
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -74,13 +82,14 @@
     margin: 2px;
     z-index: 1;
     border-radius: 20px;
+    margin: 0;
 }
 .home ul{
-    align-self: flex-start;
+    align-self: center;
 }
 .ul-title{
     padding-left: 10px;
-    align-self: flex-start;
+    align-self: center;
 }
 .home ul li{
     padding: 10px;
@@ -91,20 +100,85 @@
     border-bottom: 2px solid purple;
 }
 
+.start-page{
+    height: 100px;
+    background: linear-gradient(to bottom, #141414, transparent);
+    width: 100%;
+}
+
 .end-page{
     height: 100px;
     background: linear-gradient(to top, #141414, transparent);
     width: 100%;
 }
 
-.home-img{
-    width: 95%;
-    z-index: 0;
-    opacity: 0.7;
-    border-radius: 20px;
-    border: solid 5px black;
-    filter: drop-shadow(0px 0px 10px purple);
+.latest-blog-heading{
+    box-sizing: border-box;
+    margin: 0;
+    margin-bottom: -10px;
+    width: 100%;
+    max-width: 450px;
+    text-align: center;
+    padding: 20px;
+    color: white;
+    background-color: #303030;
+    filter: drop-shadow(0px 0px 4px aqua);
+    border: 2px solid aqua;
 }
+
+.latest-blog-div{
+    position: relative;
+    width: 100%;
+    max-width: 450px;
+    height: fit-content;
+    filter: drop-shadow(0px 0px 4px aqua);
+    text-decoration: none;
+    overflow: hidden;
+    border-radius: 10px;
+    border: 2px solid aqua;
+    color: aliceblue;
+    background-color: #282828;
+    cursor: pointer;
+    transition-duration: 0.6s;
+    margin-bottom: 30px;
+}
+
+.latest-blog-div:hover{
+    filter: drop-shadow(0px 0px 4px purple);
+    border: 2px solid purple;
+    transform: translateY(-10px);
+}
+
+.latest-blog-div img{
+    width: 100%;
+}
+
+.latest-blog-div h3{
+    margin: 0;
+    box-sizing: border-box;
+    padding-left: 10px;
+    filter: drop-shadow(0px 0px 4px #282828);
+    width: 100%;
+}
+.latest-blog-div h4{
+    margin: 0;
+    margin-top: 5px;
+    box-sizing: border-box;
+    padding-left: 10px;
+    filter: drop-shadow(0px 0px 4px #282828);
+    width: 100%;
+    border-bottom: 2px solid purple;
+    padding-bottom: 5px;
+}
+.latest-blog-div p{
+    margin: 0;
+    text-align: left;
+    box-sizing: border-box;
+    padding: 10px;
+    filter: drop-shadow(0px 0px 4px #282828);
+    width: 100%;
+}
+
 
 
 
