--- a/src/Blog/Blog.css
+++ b/src/Blog/Blog.css
@@ -15,6 +15,7 @@
     text-wrap: wrap;
 }
 .blog-topics{
+    box-sizing: border-box;
     width: 100%;
     display: flex;
     flex-direction: row;
