--- a/src/AboutMe/AboutMe.css
+++ b/src/AboutMe/AboutMe.css
@@ -8,6 +8,7 @@
     align-items: center;
     justify-content: center;
     height: max-content;
+    padding: 10px;
 }
 
 .info{
@@ -19,7 +20,12 @@
     justify-content: space-evenly;
 }
 
+.AboutMe h1{
+    color: aqua;
+}
+
 .avatarSec{
+    box-sizing: border-box;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
@@ -29,8 +35,11 @@
     background-image: url('../Resources/HomeBackground.jpg');
     background-size: 100px;
     border-radius: 20px;
-    width: 95%;
+    width: 100%;
     gap: 20px;
+    margin-bottom: -20px;
+    z-index: 3;
+    filter: drop-shadow(0px 0px 4px #141414);
 }
 
 .stats{
@@ -61,22 +70,28 @@
 
 
 .mainInfo{
-    width: 95%;
+    box-sizing: border-box;
+    width: 100%;
+    padding: 40px 10px 10px 10px;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
     align-items: stretch;
     justify-content: space-evenly;
     height: max-content;
+    background-color: #282828;
+    color: white;
 }
 
 .bio-sec{
+    box-sizing: border-box;
     display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
+    flex-direction: flex;
+    flex-wrap: wrap;
+    gap: 10px;
+    justify-content: center;
     align-items: center;
-    width: 90%;
-    max-width: 650px;
+    width: 100%;
 }
 
 #CityLink{
@@ -109,74 +124,95 @@
     transform: rotate(360deg);
 }
 
-.mainInfo p{
-    max-width: 700px;
+.bio-sec p{
+    text-align: center;
+    max-width: 500px;
+}
+
+.bio-sec p:first-child{
+    text-align: center;
+    width: 100%;
+    max-width: 100%;
+}
+
+.bio-sec p:nth-child(3){
+    text-align: center;
+    width: 100%;
+    max-width: 100%;
+}
+
+.bio-sec h3{
+    width: 100%;
     text-align: center;
 }
 
 .certificates-sec{
     box-sizing: border-box;
     display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    overflow: hidden;
-    width: 100%;
-    max-width: 500px;
-}
-.cert-pick-container{
-    width: 100%;
-    display: flex;
-    flex-direction: column;
+    flex-direction: row;
+    flex-wrap: wrap;
     align-items: flex-start;
-    justify-content: flex-start;
-    padding: 20px
-
-}
-.cert-pick{
-    width: fit-content;
-    display: flex;
-    flex-direction: row;
     justify-content: center;
-    align-items: center;
-    color: aqua;
-    height: 60px;
-}
-.lang-buttons{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-evenly;
-    align-items: center;
-    width: 100%;
     overflow: hidden;
-    height: 100px;
+    width: 100%;
+    gap: 10px;
+}
+
+.certificates-sec h1{
+    width: 100%;
+    text-align: center;
+}
+
+.lang-buttons{
+    box-sizing: border-box;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: flex-start;
+    width: 200px;
+    padding: 10px;
 }
 .lang-buttons button{
+    text-align: left;
+    width: 100%;
     padding: 10px;
     background: none;
     border: none;
-    border-radius: 10px;
-    border: 2px transparent solid;
-    border-top: none;
-    border-bottom: none;
+    border: 2px white solid;
     color: aqua;
     transition-duration: 0.4s;
-    animation: iconPulse 2s linear infinite;
+    border-radius: 10px 0px 0px 10px;
 }
 .lang-buttons button:hover{
-    background: none;
     background-color: rgba(128, 0, 128, 0.5);
     border: 2px purple solid;
-    border-top: none;
-    border-bottom: none;
     cursor: pointer;
 }
 .lang-buttons button.selected{
     background-color: rgba(128, 0, 128, 0.5);
     border: 2px purple solid;
-    border-top: none;
-    border-bottom: none;
-    animation: none;
+    transform: translateX(25px);
+    filter: drop-shadow(0px 0px 10px purple);
+}
+
+@media (max-width: 800px) {
+    .certificates-sec{
+        gap: 0px;
+    }
+    .lang-buttons{
+        flex-direction: row;
+    }
+    .lang-buttons button{
+        text-align: center;
+        width: max-content;
+        border-radius: 10px 10px 0px 0px;
+    }
+    .lang-buttons button.selected{
+        background-color: rgba(128, 0, 128, 0.5);
+        border: 2px purple solid;
+        transform: translateY(25px);
+        filter: drop-shadow(0px 0px 10px purple);
+    }
 }
 
 .hidden{
