--- a/src/Home/Home.css
+++ b/src/Home/Home.css
@@ -135,6 +135,37 @@
     margin-bottom: 30px;
 }
 
+.glimpse-div{
+    box-sizing: border-box;
+    padding: 10px 10px 30px 10px;
+    gap: 10px;
+    justify-content: center;
+    align-items: stretch;
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    margin-bottom: 30px;
+    border-bottom: 2px solid white;
+}
+
+.home-glimpse{
+    box-sizing: border-box;
+    padding: 10px;
+    width: 100%;
+    max-width: 300px;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-decoration: none;
+    color: white;
+    border-bottom: 2px solid purple;
+}
+
+.home-glimpse p{
+    margin: 0;
+}
+
 
 
 
