--- a/src/components/DeezerCard.css
+++ b/src/components/DeezerCard.css
@@ -4,32 +4,40 @@
     align-items: center;
     width: 400px;
     overflow: hidden;
-    height: 120px;
     text-decoration: none;
     color: white;
     border: 4px solid purple;
     border-radius: 15px;
-    background-color: purple;
     filter: drop-shadow(0px 0px 10px purple);
     transition-duration: 0.6s;
+    background: linear-gradient(to right, #343434, transparent);
 }
 .thumbnail{
-    width: 45%;
+    width: 35%;
     object-fit: cover;
+    justify-self: flex-start;
+    align-self: flex-start;
     border-right: 2px solid purple;
 }
 .card-info-container{
+    box-sizing: border-box;
+    padding: 5px;
     font-size: 13px;
-    display: flex;
-    gap: 0px;
     align-items: flex-start;
     justify-content: flex-start;
-    flex-wrap: wrap;
     align-self: stretch;
-    background: linear-gradient(to right, #343434, transparent);
+    flex-wrap: wrap;
+    
+}
+.card-info-container h3{
+    box-sizing: border-box;
+    margin: 0;
+    padding: 5px;
 }
 .card-info-container p{
-    padding-left: 5px;
+    box-sizing: border-box;
+    margin: 0;
+    padding: 5px;
 }
 .deezer-logo{
     position: absolute;
