--- a/src/components/socialIcon.css
+++ b/src/components/socialIcon.css
@@ -14,6 +14,7 @@
     border-bottom: 2px solid purple;
     border-radius: 30px;
     transition-duration: 0.7s;
+    cursor: pointer;
 }
 
 .contact-social-icon img{
