--- a/src/Blog/BlogTopicPage.css
+++ b/src/Blog/BlogTopicPage.css
@@ -12,18 +12,26 @@
     border: 2px purple solid;
     margin-bottom: 20px;
     color:azure;
+    overflow: hidden;
 }
 
 .blog-topic-title{
+    display: flex;
+    flex-wrap: wrap;
     box-sizing: border-box;
+    justify-content: flex-start;
+    align-items: flex-start;
     width: 100%;
     overflow: hidden;
-    background-color: rgba(128, 0, 128, 0.5);
-    border-top-right-radius: 20px ;
-    border-top-left-radius: 20px ;
+    background-color: rgba(128, 0, 128, 0.3);
+    backdrop-filter: blur(5px);
+    box-shadow: 0px 0px 4px white;
 }
 
 .blog-topic-title-text{
+    box-sizing: border-box;
+    width: 100%;
+    max-width: 400px;
     position: relative;
     top: 0px;
     z-index: 1;
@@ -31,10 +39,23 @@
     text-shadow: 3px 3px 2px black;
 }
 
+.topic-page-views{
+    display: flex;
+    align-items: center;
+    gap: 5px
+}
+
 .page-cover{
-    width: 100%;
-    height: 200px;
+    box-sizing: border-box;
     object-fit: cover;
+    width: 60%;
+    align-self: center;
+    justify-self: center;
+}
+@media (max-width: 699px) {
+    .page-cover{
+        width: 100%;
+    }
 }
 
 .blog-contents{
